--- a/ansible_poc.yaml
+++ b/ansible_poc.yaml
@@ -5,11 +5,11 @@
   tasks:
     - name: ansible create directory example
     file:
-      path: /tmp/%BUDRIKAITE%/java_dns
+      path: /tmp/test/java_dns
       state: directory
       
     - name: download sources
-    get_url: url=https://repo1.maven.org/maven2/dnsjava/dnsjava/3.5.0/dnsjava-3.5.0.jar dest=/tmp/%BUDRIKAITE%/java_dns
+    get_url: url=https://repo1.maven.org/maven2/dnsjava/dnsjava/3.5.0/dnsjava-3.5.0.jar dest=/tmp/test/java_dns
 
     - name: Print text
       debug:
