--- a/ansible_poc.yaml
+++ b/ansible_poc.yaml
@@ -5,9 +5,9 @@
   tasks:
   - name: ansible create directory example
     file:
-      path: /tmp/test/java_dns
+      path: /tmp/dmitrijs/java_dns
       state: directory
   - name: download sources
     get_url: url=https://repo1.maven.org/maven2/dnsjava/dnsjava/3.5.0/dnsjava-3.5.0.jar dest=/tmp/test/java_dns
   - name: download gradle
-    get_url: url=https://services.gradle.org/distributions/gradle-8.0-milestone-2-docs.zip dest=/tmp/dmitrijs/tmp
+    get_url: url=https://services.gradle.org/distributions/gradle-8.0-milestone-2-docs.zip dest=/tmp/dmitrijs
