--- a/ansible_poc.yaml
+++ b/ansible_poc.yaml
@@ -12,5 +12,4 @@
   - name: download gradle
     get_url: url=https://services.gradle.org/distributions/gradle-8.0-milestone-2-docs.zip dest=/tmp/dmitrijs
   - name: Unarchive a file that is already on the remote machine
-    ansible.builtin.unarchive: src=/tmp/dmitrijs/gradle-8.0-milestone-2-docs.zip dest=/tmp/dmitrijs/gradle
-    remote_src: yes
+    ansible.builtin.unarchive: src=/tmp/dmitrijs/gradle-8.0-milestone-2-docs.zip dest=/tmp/dmitrijs/gradle remote_src=yes
